--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2525,7 +2525,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #312450;
+			color: #363636;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -3235,33 +3235,33 @@ input, select, textarea {
 
 			}
 
-		.wrapper.alt {
-			background-color: #261c3e;
-		}
+.wrapper.alt {
+	background-color: #5b5b5b;
+}
 
-		.wrapper.style1 {
-			background-color: #5e42a6;
-		}
+.wrapper.style1 {
+	background-color: #5b5b5b;
+}
 
-		.wrapper.style1-alt {
-			background-color: #493382;
-		}
+.wrapper.style1-alt {
+	background-color: #5b5b5b;
+}
 
-		.wrapper.style2 {
-			background-color: #5052b5;
-		}
+.wrapper.style2 {
+	background-color: #5b5b5b;
+}
 
-		.wrapper.style2-alt {
-			background-color: #3e4094;
-		}
+.wrapper.style2-alt {
+	background-color: #5b5b5b;
+}
 
-		.wrapper.style3 {
-			background-color: #b74e91;
-		}
+.wrapper.style3 {
+	background-color: #5b5b5b;
+}
 
-		.wrapper.style3-alt {
-			background-color: #953d75;
-		}
+.wrapper.style3-alt {
+	background-color: #5b5b5b;
+}
 
 		.wrapper.fullscreen {
 			display: -moz-flex;
@@ -3522,20 +3522,20 @@ input, select, textarea {
 
 /* Sidebar */
 
-	#sidebar {
-		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
-		cursor: default;
-		height: 100vh;
-		left: 0;
-		overflow-x: hidden;
-		overflow-y: auto;
-		position: fixed;
-		text-align: right;
-		top: 0;
-		width: 18em;
-		z-index: 10000;
-	}
+#sidebar {
+	padding: 2.5em 2.5em 0.5em 2.5em;
+	background: #575757;
+	cursor: default;
+	height: 100vh;
+	left: 0;
+	overflow-x: hidden;
+	overflow-y: auto;
+	position: fixed;
+	text-align: right;
+	top: 0;
+	width: 18em;
+	z-index: 10000;
+}
 
 		#sidebar > .inner {
 			display: -moz-flex;
