--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3005,7 +3005,8 @@ input, select, textarea {
 
 		.spotlights > section > .image {
 			background-position: center center;
-			background-size: cover;
+			background-repeat: no-repeat;
+			background-size: contain;
 			border-radius: 0;
 			display: block;
 			position: relative;
