--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,9 +97,9 @@ input, select, textarea {
 		box-sizing: inherit;
 	}
 
-	body {
-		background: #312450;
-	}
+body {
+	background: #330a10;
+}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
@@ -2525,7 +2525,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #363636;
+			color: #c71616;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -3237,31 +3237,31 @@ input, select, textarea {
 			}
 
 .wrapper.alt {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 .wrapper.style1 {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 .wrapper.style1-alt {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 .wrapper.style2 {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 .wrapper.style2-alt {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 .wrapper.style3 {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 .wrapper.style3-alt {
-	background-color: #5b5b5b;
+	background-color: #170608;
 }
 
 		.wrapper.fullscreen {
@@ -3525,7 +3525,7 @@ input, select, textarea {
 
 #sidebar {
 	padding: 2.5em 2.5em 0.5em 2.5em;
-	background: #232323;
+	background: #100001;
 	cursor: default;
 	height: 100vh;
 	left: 0;
@@ -3908,3 +3908,13 @@ input, select, textarea {
 			}
 
 		}
+
+/* Project Section Styles */
+.project-section {
+	position: relative;
+	background-size: cover;
+	background-position: center;
+
+}
+
+	
