--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3237,31 +3237,31 @@ body {
 			}
 
 .wrapper.alt {
-	background-color: #170608;
+	background-color: #1d212b;
 }
 
 .wrapper.style1 {
-	background-color: #170608;
+	background-color: #1d212b;
 }
 
 .wrapper.style1-alt {
-	background-color: #170608;
+	background-color: #1d212b;
 }
 
 .wrapper.style2 {
-	background-color: #170608;
+	background-color: #1d212b;
 }
 
 .wrapper.style2-alt {
-	background-color: #170608;
+	background-color: #1d212b;
 }
 
 .wrapper.style3 {
-	background-color: #170608;
+	background-color: #1d212b;
 }
 
 .wrapper.style3-alt {
-	background-color: #170608;
+	background-color: #213954;
 }
 
 		.wrapper.fullscreen {
@@ -3525,7 +3525,7 @@ body {
 
 #sidebar {
 	padding: 2.5em 2.5em 0.5em 2.5em;
-	background: #100001;
+	background: #03070c;
 	cursor: default;
 	height: 100vh;
 	left: 0;
@@ -3873,41 +3873,32 @@ body {
 
 /* Intro */
 
-	#intro {
-		background-attachment: fixed;
-		background-image: url("images/intro.svg");
-		background-position: top right;
-		background-repeat: no-repeat;
-		background-size: 100% 100%;
+#intro {
+	background-attachment: fixed;
+	background-image: url("images/intro4.gif");
+	background-position: top right;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	position: relative; 
+	overflow: hidden;
+}
+
+	#intro:before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(0, 0, 0, 0.8); /*change last one for opacity - past brodie thank me later*/
+		z-index: 1;
 	}
 
-		#intro p {
-			font-size: 1.25em;
-		}
+	#intro .inner {
+		position: relative;
+		z-index: 2; 
+	}
 
-			@media screen and (max-width: 980px) {
-
-				#intro p br {
-					display: none;
-				}
-
-			}
-
-			@media screen and (max-width: 736px) {
-
-				#intro p {
-					font-size: 1em;
-				}
-
-			}
-
-		@media screen and (max-width: 1280px) {
-
-			#intro {
-				background-attachment: scroll;
-			}
-
-		}
 
 /* Project Section Styles */
 .project-section {
