Credit, theme updated

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3237,31 +3237,31 @@ body {
 			}
 
 .wrapper.alt {
-	background-color: #1d212b;
+	background-color: #0e1521;
 }
 
 .wrapper.style1 {
-	background-color: #1d212b;
+	background-color: #0e1521;
 }
 
 .wrapper.style1-alt {
-	background-color: #1d212b;
+	background-color: #0e1521;
 }
 
 .wrapper.style2 {
-	background-color: #1d212b;
+	background-color: #0e1521;
 }
 
 .wrapper.style2-alt {
-	background-color: #1d212b;
+	background-color: #0e1521;
 }
 
 .wrapper.style3 {
-	background-color: #1d212b;
+	background-color: #0e1521;
 }
 
 .wrapper.style3-alt {
-	background-color: #213954;
+	background-color: #0e1521;
 }
 
 		.wrapper.fullscreen {
