--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3933,16 +3933,16 @@ body {
 }
 
 .sprite-container {
-	display: flex; 
-	justify-content: center; 
-	align-items: center; 
-	width: 500px; 
-	height: 500px; 
-	margin: 10px; 
-	overflow: hidden; 
-	background: #f0f0f0; 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 500px;
+	height: 500px;
+	margin: 10px;
+	overflow: hidden;
+	background: #f0f0f0;
 	border-radius: 0px;
-
+	background: transparent;
 }
 
 .sprite-container img {
