--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ input, select, textarea {
 	}
 
 body {
-	background: #330a10;
+	background: #070b0f;
 }
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -3466,7 +3466,7 @@ body {
 /* Wrapper (main) */
 
 	#sidebar + #wrapper {
-		margin-left: 18em;
+		margin-left: 12em;
 	}
 
 		@media screen and (max-width: 1280px) {
@@ -3534,7 +3534,7 @@ body {
 	position: fixed;
 	text-align: right;
 	top: 0;
-	width: 18em;
+	width: 13em;
 	z-index: 10000;
 }
 
@@ -3959,6 +3959,11 @@ body {
 	gap: 15px; 
 }
 
+.favicon {
+	width: 50px; 
+	height: 50px; 
+	object-fit: contain; 
+}
 
 
 
