--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4069,6 +4069,21 @@ body {
 	display: block;
 }
 
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: center
+}
+
+img {
+	max-width: 80%;
+	max-height: 80%;
+}
+
+.text {
+	font-size: 20px;
+	padding-left: 20px;
+}
 
 
 
